--- a/index.html
+++ b/index.html
@@ -169,13 +169,14 @@
     <!-- Skills -->
     <h2>Technical Skills</h2>
     <ul>
-      <li>Languages: Java, C++, Python, C</li>
-      <li>Web Development: HTML, CSS, JavaScript, PHP, VBScript</li>
-      <li>Databases: MySQL, Oracle, SQL Server</li>
-      <li>Mobile App Development: Android</li>
-      <li>Tools/Frameworks: .NET, Microsoft Office</li>
-      <li>Operating Systems: Windows, Linux, macOS</li>
-      <li>Concepts: SDLC, Algorithms, Data Structures</li>
+      <li>Front-End Development: HTML5, CSS3, JavaScript, Bootstrap, Responsive Design </li>
+      <li>Back-End Development: ASP.NET, PHP, VB.NET, Java </li>
+      <li>Database Technologies: MySQL, SQL Server, Oracle</li>
+      <li>Programming Languages: Java, Python, C++, C</li>
+      <li>Version Control & Tools: Git, GitHub, Visual Studio, Android Studio </li>
+      <li>Mobile Development: Android Programming (Java/XML) </li>
+      <li>Frameworks & Concepts: SDLC, MVC Architecture, RESTful APIs </li>
+      <li>Soft Skills: Problem Solving, Team Collaboration, Communication, Time Management </li>
     </ul>
 
     <!-- Projects -->
@@ -204,14 +205,13 @@
     </div>
 
     <!-- Internship -->
-    <h2>Internship</h2>
-    <h3>FirstDigiAdd – Web Development & Marketing (3 Months)</h3>
+    <h2>PROFESSIONAL EXPERIENCE </h2>
+    <h3>Web Developer & SEO Executive | FirstDigiAdd, Pune (May 2024 – July 2024) </h3>
     <ul>
       <li>Designed and developed responsive websites using HTML, CSS, JS</li>
       <li>Enhanced SEO and cross-device UX</li>
       <li>Received Best Intern award</li>
     </ul>
-    <img src="incer.jpg" class="certificate-img" alt="Internship Certificate" />
 
     <!-- Achievements -->
     <h2>Achievements</h2>
@@ -226,7 +226,7 @@
     <h3>Bachelor of Computer Applications (BCA)</h3>
     <p><strong>Kavikulaguru Kalidas Sanskrit University, Ramtek</strong><br>
     Key Subjects: Programming, DBMS, Networking, Web Dev, Software Engineering<br>
-    Final Semester Completed – Result Awaited</p>
+    8.99 CGPA</p>
 
     <h3>Higher Secondary Certificate (HSC)</h3>
     <p><strong>Ramraje Junior College, Dapoli</strong><br>
