--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <h2>Technical Skills</h2>
     <ul>
       <li>Front-End Development: HTML5, CSS3, JavaScript, Bootstrap, Responsive Design </li>
-      <li>Back-End Development: ASP.NET, PHP, VB.NET, Java </li>
+      <li>Back-End Development: ASP.NET, PHP, VB.NET </li>
       <li>Database Technologies: MySQL, SQL Server, Oracle</li>
       <li>Programming Languages: Java, Python, C++, C</li>
       <li>Version Control & Tools: Git, GitHub, Visual Studio, Android Studio </li>
